# quantum_fuzzy_system

./: README.md  quantum fuzzy - Maria Zampella.ipynb
QFIE/: LICENSE.md  README.md  requirements.txt  setup.cfg
QFIE/docs/source/: Fan_Speed_Control.ipynb  Lighting_Control.ipynb  QFIE.rst  QFIE_v_1_1_0.ipynb  conf.py  index.rst  modules.rst
QFIE/src/QFIE/: fuzzy_partitions.py
QFIE/src/QFIE.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
