[metadata]
name = QFIE
version = 1.1.0
author = R. Schiattarella
author_email = roberto.schiattarella@unina.it
description = Quantum Fuzzy Inference Engines with Python
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/Quasar-UniNA/QFIE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Topic :: Scientific/Engineering :: Computer Science

[options]
zip_safe = False
package_dir=
    =src
packages=find:
python_requires = >=3.7
install_requires =
    qiskit>=0.34.2


[options.packages.find]
where = src

[options.extras_require]
examples =
    matplotlib
    jupyter==1.0.0
docs =
    sphinx>=5.1.1
    sphinx-rtd-theme>=1.0.0
    sphinxcontrib-napoleon>=0.7
    nbsphinx>=0.8.9
